--- a/src/demo-wi.ipynb
+++ b/src/demo-wi.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68c814dc",
+   "id": "9cf24b03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4109e0f0",
+   "id": "9adccb8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e616bab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav.show_wave(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7b53f709",
    "metadata": {},
    "outputs": [],
@@ -65,7 +75,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94808862",
+   "id": "6677b1ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav.show_spectral_centroid(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f722ab7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav.show_spectral_rolloff(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "685864dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav.show_spectral_bandwidth(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b159d29",
    "metadata": {},
    "outputs": [],
    "source": []
