min_max_power correction

--- a/src/demo-wi.ipynb
+++ b/src/demo-wi.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = '../wavs/origin/0001.wav'"
+    "test = '../wavs/origin/0002.wav'"
    ]
   },
   {
@@ -55,11 +55,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e616bab4",
+   "id": "017fbfff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wav.show_wave(0)"
+    "# wav.show_wave(0)"
    ]
   },
   {
@@ -75,21 +75,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6677b1ce",
+   "id": "dfa12020",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wav.show_spectral_centroid(0)"
+    "# wav.show_spectral_centroid(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f722ab7",
+   "id": "4fe6e135",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wav.show_spectral_rolloff(0)"
+    "# wav.show_spectral_rolloff(0)"
    ]
   },
   {
@@ -99,13 +99,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wav.show_spectral_bandwidth(0)"
+    "# wav.show_spectral_bandwidth(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b159d29",
+   "id": "e5fdc03d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav.show_graph_spectre_total_power(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed676258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav.show_graph_spectre_min_max_power(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87aedaa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav.show_graph_spectre_total_power_with_high_accent(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08be358d",
    "metadata": {},
    "outputs": [],
    "source": []
