--- a/src/demo-wi.ipynb
+++ b/src/demo-wi.ipynb
@@ -8,6 +8,8 @@
    "outputs": [],
    "source": [
     "import wi\n",
+    "import wi_utils\n",
+    "import numpy as np\n",
     "import IPython.display as ipd"
    ]
   },
@@ -18,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = '../wavs/origin/0001.wav'"
+    "test = '../wavs/origin/0016.wav'"
    ]
   },
   {
@@ -58,13 +60,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wav.ch0().show_nspectre()"
+    "ns = wav.ch1().NSpectre"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "60a38805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wi_utils.show_map(ns)\n",
+    "print(ns.min(), ns.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1d4fdf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns2 = wi_utils.apply_filter_2d(ns, wi_utils.operator_prewitt_gx())\n",
+    "wi_utils.show_map(ns2)\n",
+    "print(ns2.min(), ns2.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "461cc645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns2 = wi_utils.apply_filter_2d(ns, wi_utils.operator_prewitt_gy())\n",
+    "wi_utils.show_map(ns2)\n",
+    "print(ns2.min(), ns2.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b1b54b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns2 = wi_utils.apply_filter_2d(ns, wi_utils.operator_sobel_gx())\n",
+    "wi_utils.show_map(ns2)\n",
+    "print(ns2.min(), ns2.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49ca3aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns2 = wi_utils.apply_filter_2d(ns, wi_utils.operator_sobel_gy())\n",
+    "wi_utils.show_map(ns2)\n",
+    "print(ns2.min(), ns2.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52be732d",
    "metadata": {},
    "outputs": [],
    "source": []
