--- a/src/demo-wi.ipynb
+++ b/src/demo-wi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6976bd80",
    "metadata": {},
    "outputs": [],
@@ -16,17 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9cf24b03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = '../wavs/origin/0001.wav'"
+    "test = '../wavs/origin/0022.wav'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9adccb8c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71c3771d",
    "metadata": {},
    "outputs": [],
@@ -46,31 +46,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4934fb09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wav.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d22e31b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wav.ch0().show_spectre()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9dc8ebd9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chunk = wav.get_chunk(0, (0, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "about-navigation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunk.generate_spectres()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "acknowledged-lecture",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunk.show_spectre_dense()"
+   ]
   }
  ],
  "metadata": {
@@ -89,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
